option('zsh-completions', type: 'boolean', value: true, description: 'Install zsh shell completions.')
option('fish-completions', type: 'boolean', value: true, description: 'Install fish shell completions.')
option('xwayland', type: 'feature', value: 'auto', description: 'Enable support for X11 applications')
option('sd-bus-provider', type: 'combo', choices: ['auto', 'libsystemd', 'libelogind', 'basu'], value: 'auto', description: 'Provider of the sd-bus library')
