hayward_sources = files(
	'commands.c',
	'config.c',
	'decoration.c',
	'ipc-json.c',
	'ipc-server.c',
	'lock.c',
	'main.c',
	'server.c',
	'haywardnag.c',
	'xdg_activation_v1.c',
	'xdg_decoration.c',

	'desktop/desktop.c',
	'desktop/idle_inhibit_v1.c',
	'desktop/layer_shell.c',
	'desktop/output.c',
	'desktop/render.c',
	'desktop/surface.c',
	'desktop/transaction.c',
	'desktop/xdg_shell.c',

	'input/input-manager.c',
	'input/cursor.c',
	'input/keyboard.c',
	'input/libinput.c',
	'input/seat.c',
	'input/seatop_default.c',
	'input/seatop_down.c',
	'input/seatop_move_floating.c',
	'input/seatop_move_tiling.c',
	'input/seatop_resize_floating.c',
	'input/seatop_resize_tiling.c',
	'input/switch.c',
	'input/tablet.c',
	'input/text_input.c',

	'config/bar.c',
	'config/output.c',
	'config/seat.c',
	'config/input.c',

	'commands/bar.c',
	'commands/bind.c',
	'commands/border.c',
	'commands/client.c',
	'commands/create_output.c',
	'commands/default_border.c',
	'commands/default_floating_border.c',
	'commands/exit.c',
	'commands/exec.c',
	'commands/exec_always.c',
	'commands/floating.c',
	'commands/floating_minmax_size.c',
	'commands/floating_modifier.c',
	'commands/focus.c',
	'commands/focus_follows_mouse.c',
	'commands/focus_on_window_activation.c',
	'commands/focus_wrapping.c',
	'commands/font.c',
	'commands/force_display_urgency_hint.c',
	'commands/force_focus_wrapping.c',
	'commands/fullscreen.c',
	'commands/gaps.c',
	'commands/hide_edge_borders.c',
	'commands/inhibit_idle.c',
	'commands/kill.c',
	'commands/max_render_time.c',
	'commands/opacity.c',
	'commands/include.c',
	'commands/input.c',
	'commands/layout.c',
	'commands/mode.c',
	'commands/move.c',
	'commands/new_float.c',
	'commands/new_window.c',
	'commands/nop.c',
	'commands/output.c',
	'commands/popup_during_fullscreen.c',
	'commands/reload.c',
	'commands/resize.c',
	'commands/seat.c',
	'commands/seat/attach.c',
	'commands/seat/cursor.c',
	'commands/seat/fallback.c',
	'commands/seat/hide_cursor.c',
	'commands/seat/idle.c',
	'commands/seat/keyboard_grouping.c',
	'commands/seat/pointer_constraint.c',
	'commands/seat/shortcuts_inhibitor.c',
	'commands/seat/xcursor_theme.c',
	'commands/set.c',
	'commands/shortcuts_inhibitor.c',
	'commands/smart_borders.c',
	'commands/smart_gaps.c',
	'commands/sticky.c',
	'commands/haywardbg_command.c',
	'commands/haywardnag_command.c',
	'commands/tiling_drag.c',
	'commands/tiling_drag_threshold.c',
	'commands/title_align.c',
	'commands/title_format.c',
	'commands/titlebar_border_thickness.c',
	'commands/titlebar_padding.c',
	'commands/urgent.c',
	'commands/workspace.c',
	'commands/ws_auto_back_and_forth.c',
	'commands/xwayland.c',

	'commands/bar/bind.c',
	'commands/bar/binding_mode_indicator.c',
	'commands/bar/colors.c',
	'commands/bar/font.c',
	'commands/bar/gaps.c',
	'commands/bar/height.c',
	'commands/bar/hidden_state.c',
	'commands/bar/icon_theme.c',
	'commands/bar/id.c',
	'commands/bar/mode.c',
	'commands/bar/modifier.c',
	'commands/bar/output.c',
	'commands/bar/pango_markup.c',
	'commands/bar/position.c',
	'commands/bar/separator_symbol.c',
	'commands/bar/status_command.c',
	'commands/bar/status_edge_padding.c',
	'commands/bar/status_padding.c',
	'commands/bar/strip_workspace_numbers.c',
	'commands/bar/strip_workspace_name.c',
	'commands/bar/haywardbar_command.c',
	'commands/bar/tray_bind.c',
	'commands/bar/tray_output.c',
	'commands/bar/tray_padding.c',
	'commands/bar/workspace_buttons.c',
	'commands/bar/workspace_min_width.c',
	'commands/bar/wrap_scroll.c',

	'commands/input/accel_profile.c',
	'commands/input/calibration_matrix.c',
	'commands/input/click_method.c',
	'commands/input/drag.c',
	'commands/input/drag_lock.c',
	'commands/input/dwt.c',
	'commands/input/events.c',
	'commands/input/left_handed.c',
	'commands/input/map_from_region.c',
	'commands/input/map_to_output.c',
	'commands/input/map_to_region.c',
	'commands/input/middle_emulation.c',
	'commands/input/natural_scroll.c',
	'commands/input/pointer_accel.c',
	'commands/input/repeat_delay.c',
	'commands/input/repeat_rate.c',
	'commands/input/scroll_button.c',
	'commands/input/scroll_factor.c',
	'commands/input/scroll_method.c',
	'commands/input/tap.c',
	'commands/input/tap_button_map.c',
	'commands/input/tool_mode.c',
	'commands/input/xkb_capslock.c',
	'commands/input/xkb_file.c',
	'commands/input/xkb_layout.c',
	'commands/input/xkb_model.c',
	'commands/input/xkb_numlock.c',
	'commands/input/xkb_options.c',
	'commands/input/xkb_rules.c',
	'commands/input/xkb_switch_layout.c',
	'commands/input/xkb_variant.c',

	'commands/output/adaptive_sync.c',
	'commands/output/background.c',
	'commands/output/disable.c',
	'commands/output/dpms.c',
	'commands/output/enable.c',
	'commands/output/max_render_time.c',
	'commands/output/mode.c',
	'commands/output/position.c',
	'commands/output/render_bit_depth.c',
	'commands/output/scale.c',
	'commands/output/scale_filter.c',
	'commands/output/subpixel.c',
	'commands/output/toggle.c',
	'commands/output/transform.c',

	'tree/arrange.c',
	'tree/column.c',
	'tree/node.c',
	'tree/root.c',
	'tree/view.c',
	'tree/window.c',
	'tree/workspace.c',
	'tree/output.c',
)

hayward_deps = [
	cairo,
	drm,
	jsonc,
	libevdev,
	libinput,
	libudev,
	math,
	pango,
	pcre2,
	glesv2,
	pixman,
	server_protos,
	wayland_server,
	wlroots,
	xkbcommon,
	xcb_icccm,
]

if have_xwayland
	hayward_sources += 'desktop/xwayland.c'
	hayward_deps += xcb
endif

executable(
	'hayward',
	hayward_sources,
	include_directories: [hayward_inc],
	dependencies: hayward_deps,
	link_with: [lib_hayward_common],
	install: true
)

test_suites = {
	'lint': [
		'imports',
	],
}

pymod = import('python')
python = pymod.find_installation('python3')

foreach suite, tests : test_suites
	foreach test_name : tests
		test(
			suite + '-' + test_name,
			python,
			args: [
				meson.current_source_dir() +
				'/tests/' + suite +
				'/test_' + test_name.replace('-', '_') + '.py',
			],
			env: {
				'MESON_BUILD_ROOT': meson.project_build_root(),
				'MESON_SOURCE_ROOT': meson.project_source_root(),
			},
			timeout: 100,
		)
	endforeach
endforeach
